[package]
name = "bigpanda-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
headers = "0.3.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
mime = "0.3.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.0.1", features = ["rt", "macros"]}
